--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity
 .icon.icon-linkedin { background-position: 0px -32px; }
 .icon.icon-skype { background-position: 0px -64px; }
 .icon.icon-email { background-position: 0px -96px; }
+.icon2 { display: inline-block; background: url(images/o.png) no-repeat; height: 256px; width: 256px; } 
 
 .jumbotron {
 	background: no-repeat center right fixed url(images/2175218.jpg);
