--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html
 {
-	background: url('images/wallpapersden.com_cool-4k-pattern_3840x2160.jpg')no-repeat center;
+	background: url('alexeleftheriadis.github.io/images/wallpapersden.com_cool-4k-pattern_3840x2160.jpg')no-repeat center;
 	background-size: auto;
 }
 
